WIP: setup redux and structures

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,12 @@
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true,
+    "baseUrl": "./src",
+     "paths": {
+      "@/*": ["./*"],
+     },
     /* Completeness */
+    
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
   "exclude": [
