--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-navigation/native": "^5.9.8",
+    "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.9.1",
+    "@react-navigation/stack": "^6.3.2",
     "@reduxjs/toolkit": "^1.8.6",
+    "axios": "0.27.2",
     "react": "18.1.0",
     "react-native": "0.70.3",
     "react-native-gesture-handler": "^2.8.0",
